<resources>

    <string name="app_name">Bills Manager</string>

    <!-- Invoice -->
    <!-- todo payment method -->
    <string name="html_invoice" translatable="false"><![CDATA[
        <html>
            <head></head>
            <body>
                <h1>%1$s</h1>
                <p>amount :  %2$.2f $</p>
                <p>credit : %3$s</p>
                <p>Date : %4$s</p>
                <h2>Tags</h2>
                <ul>%5$s</ul>
                <p>Address : %6$s</p>
                <p>Recipient name : %7$s</p>
                <p>Notes : %8$s</p>
            </body>
        </html>
        ]]></string>


    <!-- default icon name -->
    <string name="alim">food</string>
    <string name="home">home/rent</string>
    <string name="life">every day life</string>
    <string name="tran">transport/car</string>
    <string name="heal">health</string>
    <string name="digi" >digital</string>
    <string name="unlabeled" >Unlabeled</string>

    <!-- Main Activity -->
    <string name="version" translatable="false">v%1$s</string>
    <string name="add">Add</string>
    <string name="edit_tags">Edit tags</string>
    <string name="saved_invoices">Saved invoices</string>
    <string name="stats">Statistics</string>

    <!-- Saved Activity -->
    <string name="could_not_add">Could add not the selected tag</string>
    <string name="date" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="amount" translatable="false">%1$.2f $</string>
    <string name="could_not_download">Could not download file</string>
    <string name="download_succ">Invoice downloaded successfully </string>
    <string name="could_not_delete">Could not delete invoice</string>
    <string name="delete_succ">Invoice delete successfully </string>
    <string name="addResearchTag">Add a tag to the research</string>
    <string name="addButtonResearchTag">Add</string>

    <!-- Tag Activity -->
    <string name="format_date" >MM/dd/yy</string>
    <string name="tag_id" translatable="false">#%1$d</string>
    <string name="name_already">Could not add %1$s. Name already taken !</string>
    <string name="too_short">Could not add %1$s. Name too short !</string>
    <string name="addNewTagLabel">Name of the new tag</string>
    <string name="addNewTagButton">Add</string>
    <string name="cannot_delete_default_tag">Cannot delete a default tag</string>
    <string name="could_not_delete_tag">Could not delete a tag that is used in an invoice</string>
    <string name="delete_succ_tag">Tag deleted suc</string>

    <!-- Add activity -->
    <string name="addtitle">Add an Invoice </string>
    <string name="amountLabel">Amount :</string>
    <string name="dateLabel" translatable="false"> Date : </string>
    <string name="radiobuttonIsCredit">Debtor</string>
    <string name="radiobuttonIsDebit">Creditor</string>
    <string name="destName">Recipient : </string>
    <string name="infoSuppLabel">Optional information</string>
    <string name="addressLabel">Address : </string>
    <string name="label_num_address">Num : </string>
    <string name="address_button">display address</string>
    <string name="address_button_hide">hide address</string>
    <string name="street_address">Street :</string>
    <string name="street_address_edit" translatable="false" />
    <string name="city_address">City :</string>
    <string name="city_address_edit" translatable="false" />
    <string name="state_address">State :</string>
    <string name="state_address_edit" translatable="false" />
    <string name="toast_address_completed"> You have started the address but it is not complete</string>
    <string name="paymentLabel">Payment Type</string>
    <string name="amountEditText" translatable="false" />
    <string name="personalNameLabel">Name : </string>
    <string name="personalNameEdit" translatable="false" />
    <string name="notesLabel" translatable="false">Notes : </string>
    <string name="notesEditText" translatable="false" />
    <string name="selectTagLabelForNewInvoice">Select one or many Tag : </string>
    <string name="toastfieldrequired">Require fields not complete </string>
    <string name="toastinvoicecompleted">Well added invoice! </string>

    <string name="butAddInvoice">Add</string>


    <!-- Stats activity -->
    <string name="selection_start_date">Select start date</string>
    <string name="selection_end_date">Select end date</string>
    <string name="generate">Generate</string>

    <!-- General information -->
    <string name="appVersion">v0.1</string>
    <string name="appGeneralText">An application to easily manage your invoices!</string>

    <string name="button_for_add_tags">button for add tags</string>

    <!-- content  -->
    <string name="see_the_invoice">see the invoice</string>
    <string name="edit_invoice">edit the invoice</string>
    <string name="delete_the_invoice">delete the invoice</string>
    <string name="donwload_the_invoice">donwload the invoice</string>
    <string name="tag_icon">tag icon</string>
    <string name="delete_the_tag">delete the tag</string>


</resources>