<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="textStart" />

    <ImageButton
        android:id="@+id/see"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:contentDescription="@string/see_the_invoice"
        android:maxWidth="40dp"
        android:minWidth="40dp"
        app:srcCompat="@drawable/see" />

    <ImageButton
        android:id="@+id/download"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:contentDescription="@string/donwload_the_invoice"
        android:maxWidth="40dp"
        android:minWidth="40dp"
        app:srcCompat="@drawable/download" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:contentDescription="@string/delete_the_invoice"
        android:maxWidth="40dp"
        android:minWidth="40dp"
        android:tint="@android:color/holo_red_dark"
        app:srcCompat="@drawable/delete" />
</LinearLayout>
